kubernetes/basic-tests/envoy-with-backend/envoy-config.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

static_resources:
  clusters:
    # - name: ext_authz-grpc-service
    #   type: STRICT_DNS
    #   connect_timeout: 20s
    #   lb_policy: ROUND_ROBIN
    #   typed_extension_protocol_options:
    #     envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
    #       "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
    #       explicit_http_config:
    #         http2_protocol_options: {}
    #   load_assignment:
    #     cluster_name: ext_authz-grpc-service
    #     endpoints:
    #     - lb_endpoints:
    #       - endpoint:
    #           address:
    #             socket_address:
    #               address: 127.0.0.1
    #               port_value: 9001
    # - name: ratelimit
    #   type: STRICT_DNS
    #   connect_timeout: 20s
    #   lb_policy: ROUND_ROBIN
    #   protocol_selection: USE_CONFIGURED_PROTOCOL
    #   http2_protocol_options: {}
    #   load_assignment:
    #     cluster_name: ratelimit
    #     endpoints:
    #       - lb_endpoints:
    #           - endpoint:
    #               address:
    #                 socket_address:
    #                   address: ratelimit
    #                   port_value: 8081
    #   "transport_socket":
    #     "name": "envoy.transport_sockets.tls"
    #     "typed_config":
    #       "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext"
    #       "common_tls_context":
    #         "tls_params":
    #             "tls_minimum_protocol_version": "TLSv1_2"
    #             "tls_maximum_protocol_version": "TLSv1_2"
    #         "tls_certificates":
    #           - "certificate_chain":
    #               "filename": "/etc/cc/security/keystore/mg.pem"
    #             "private_key":
    #               "filename": "/etc/cc/security/keystore/mg.key"
    #         "validation_context":
    #           "match_subject_alt_names":
    #             - "exact": "localhost"
    #           "trusted_ca":
    #             "filename": "/etc/cc/security/keystore/mg.pem"
    - name: clusterProd_cc-envoy_PerfAPI2.1.1
      connect_timeout: 20s
      dns_refresh_rate: 5s
      dns_lookup_family: V4_ONLY
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: clusterProd_cc-envoy_PerfAPI2.1.1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mock-backend
                      port_value: 9999


########################################################################## Generated Clusters ##########################################################################

########################################################################## Generated Clusters ##########################################################################


  listeners:
    - name: HTTPSListener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8888
      filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext"
              common_tls_context:
                tls_certificates:
                  certificate_chain:
                    filename: "/etc/cc/security/keystore/mg.pem"
                  private_key:
                    filename: "/etc/cc/security/keystore/mg.key"
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress-https
                use_remote_address: false
                stream_idle_timeout: 300s
                request_timeout: 0s
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config: {}
                  # - name: envoy.filters.http.ext_authz
                  #   typed_config:
                  #     "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                  #     grpc_service:
                  #       envoy_grpc:
                  #         cluster_name: ext_authz-grpc-service
                  #       timeout: 20s
                  #     transport_api_version: V3
                  #     clear_route_cache: true
                  # - name: envoy.filters.http.ratelimit
                  #   typed_config:
                  #     "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                  #     domain: default
                  #     request_type: external
                  #     stage: 0
                  #     timeout:
                  #       # 100ms
                  #       nanos: 100000000
                  #       # seconds: 1 # CHANGED THIS TO true FOR TESTING PURPOSE, ratelimiter service accuracy is very poor, this is to verify accuracy.
                  #     rate_limited_as_resource_exhausted: false
                  #     failure_mode_deny: false # CHANGED THIS TO true FOR TESTING PURPOSE, count how may requests are timedout
                  #     enable_x_ratelimit_headers: DRAFT_VERSION_03
                  #     rate_limit_service:
                  #       grpc_service:
                  #         envoy_grpc:
                  #           cluster_name: ratelimit
                  #       transport_api_version: V3
                  - name: envoy.filters.http.lua
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
                      inline_code: "function envoy_on_request(request_handle)\nend\nfunction envoy_on_response(response_handle)\nend"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      suppress_envoy_headers: true
                route_config:
                  name: route
                  virtual_hosts:
                    - name: default
                      domains:
                        - "cc-envoy"
                        - "cc-envoy:*"
                      request_headers_to_remove:
                        # - x-cluster-header
                        # - x-ratelimit-api-policy
                        # - x-ratelimit-application
                        # - x-ratelimit-application-policy
                        # - x-ratelimit-subscription
                        # - x-ratelimit-subscription-policy
                      # rate_limits:
                      #   - actions:
                      #       - generic_key:
                      #           descriptor_key: "org"
                      #           descriptor_value: "John"
                      #       - request_headers:
                      #           descriptor_key: "application"
                      #           header_name: "x-ratelimit-application"
                      #       - request_headers:
                      #           descriptor_key: "policy"
                      #           header_name: "x-ratelimit-application-policy"
                      #   - actions:
                      #       - generic_key:
                      #           descriptor_key: "org"
                      #           descriptor_value: "John"
                      #       - request_headers:
                      #           descriptor_key: "subscription"
                      #           header_name: "x-ratelimit-subscription"
                      #       - request_headers:
                      #           descriptor_key: "policy"
                      #           header_name: "x-ratelimit-subscription-policy"
                      #       - generic_key:
                      #           descriptor_key: "spike"
                      #           descriptor_value: "true"
                      #   - actions:
                      #       - generic_key:
                      #           descriptor_key: "org"
                      #           descriptor_value: "John"
                      #       - request_headers:
                      #           descriptor_key: "subscription"
                      #           header_name: "x-ratelimit-subscription"
                      #       - request_headers:
                      #           descriptor_key: "policy"
                      #           header_name: "x-ratelimit-subscription-policy"
                      routes:
                      # Health
                        - name: health
                          match:
                            path: /health
                          direct_response:
                            status: 200
                            body:
                              inline_string: '{"statue": "healthy"}'
                          decorator:
                            operation: "/health"
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                              disabled: true
                            envoy.filters.http.lua:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
                              disabled: true
                            envoy.filters.http.ratelimit:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute"
                              vh_rate_limits: IGNORE # Ignore Vhost rate limits
                      # Ready
                        - name: ready
                          match:
                            path: /ready
                          direct_response:
                            status: 200
                            body:
                              inline_string: '{"statue": "ready"}'
                          decorator:
                            operation: "/ready"
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                              disabled: true
                            envoy.filters.http.lua:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
                              disabled: true
                            envoy.filters.http.ratelimit:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute"
                              vh_rate_limits: IGNORE # Ignore Vhost rate limits
                      # API: PerfAPI
                        - name: PerfAPI
                          match:
                            safe_regex:
                              google_re2: {}
                              regex: "^/perfapi/2.1.1/perf[/]{0,1}"
                            headers:
                              - name: ":method"
                                string_match:
                                  safe_regex:
                                    google_re2: {}
                                    regex: "^GET|POST|OPTIONS$"
                          route:
                            cluster_header: x-cluster-header
                            auto_host_rewrite: true
                            regex_rewrite:
                              pattern:
                                google_re2: {}
                                regex: "^/perfapi/2.1.1/perf[/]{0,1}"
                              substitution: "/perf/api/v3/perf"
                            timeout: 60s
                            idle_timeout: 300s
                            upgrade_configs:
                              - upgrade_type: websocket
                                enabled: false
                            cors:
                              allow_methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
                              allow_headers: "authorization, Access-Control-Allow-Origin, Content-Type, SOAPAction, apikey, testKey, Internal-Key"
                              allow_credentials: false
                              allow_origin_string_match:
                                - safe_regex:
                                    google_re2: {}
                                    regex: ".*"
                            # rate_limits:
                            #   - actions:
                            #       - generic_key:
                            #           descriptor_key: "org"
                            #           descriptor_value: "John"
                            #       - generic_key:
                            #           descriptor_key: "vhost"
                            #           descriptor_value: "cc-envoy"
                            #       - generic_key:
                            #           descriptor_key: "resource"
                            #           descriptor_value: "/perfapi/2.1.1/perf"
                            #       - request_headers:
                            #           descriptor_key: "method"
                            #           header_name: ":method" # Special change here for HTTP method
                            #       - generic_key:
                            #           descriptor_key: "policy"
                            #           descriptor_value: "5MPerMin"
                            #       - request_headers:
                            #           descriptor_key: "condition"
                            #           header_name: "x-ratelimit-api-policy"
                          decorator:
                            operation: "cc-envoy:^/perfapi/2.1.1/perf[/]{0,1}"
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
                              disabled: true
                            envoy.filters.http.ext_authz:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                              check_settings:
                                context_extensions:
                                  basePath: "/perfapi/2.1.1"
                                  method: "GET POST"
                                  name: "PerfAPI" # API Name
                                  path: "/perfapi/2.1.1/perf"
                                  prodClusterName: "clusterProd_cc-envoy_PerfAPI2.1.1" # Cluster Name
                                  sandClusterName: ""
                                  vHost: "cc-envoy"
                                  version: "2.1.1"
                                disable_request_body_buffering: true
                            # envoy.filters.http.ratelimit:
                            #   "@type": "type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute"
                            #   vh_rate_limits: INCLUDE

########################################################################## Generated Routes ##########################################################################

########################################################################## Generated Routes ##########################################################################
